unpackaged/main/default/objects/bt_base__SCH_Schedule__c/bt_base__SCH_Schedule__c.object-meta.xml
<CustomObject>
    <label>Schedule</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Schedule</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>