unpackaged/main/default/objects/bt_base__SCH_Schedule__c/fields/bt_base__Base_Object__c.field-meta.xml
<CustomField>
    <fullName>bt_base__Base_Object__c</fullName>
    <label>Base Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>