unpackaged/main/default/objects/bt_base__SCH_Schedule__c/fields/bt_base__Execute_Now__c.field-meta.xml
<CustomField>
    <fullName>bt_base__Execute_Now__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Execute Now</label>
    <type>Checkbox</type>
</CustomField>