unpackaged/main/default/objects/bt_base__SCH_Schedule__c/fields/bt_base__Offset__c.field-meta.xml
<CustomField>
    <fullName>bt_base__Offset__c</fullName>
    <label>Offset</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>before</fullName>
                <label>Before</label>
            </value>
            <value>
                <fullName>after</fullName>
                <label>After</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>