unpackaged/main/default/objects/bt_base__SCH_Schedule__c/fields/bt_base__Offset_Type__c.field-meta.xml
<CustomField>
    <fullName>bt_base__Offset_Type__c</fullName>
    <label>Offset Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>days</fullName>
                <label>Days</label>
            </value>
            <value>
                <fullName>hours</fullName>
                <label>Hours</label>
            </value>
            <value>
                <fullName>minutes</fullName>
                <label>Minutes</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>