unpackaged/main/default/objects/bt_base__SCH_Schedule__c/fields/bt_base__Offset_Value__c.field-meta.xml
<CustomField>
    <fullName>bt_base__Offset_Value__c</fullName>
    <label>Offset Value</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>