unpackaged/main/default/objects/bt_base__SCH_Schedule__c/fields/bt_base__Related_Object_Evaluate_Criteria_JSON__c.field-meta.xml
<CustomField>
    <fullName>bt_base__Related_Object_Evaluate_Criteria_JSON__c</fullName>
    <label>Related Object Evaluate Criteria JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>