unpackaged/main/default/objects/bt_base__SCH_Schedule__c/fields/bt_base__Schedule_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>bt_base__Schedule_Date_Time__c</fullName>
    <label>Schedule Date/Time</label>
    <type>DateTime</type>
</CustomField>