unpackaged/main/default/objects/bt_base__SCH_Schedule__c/fields/bt_base__Schedule_Date_Time_Field__c.field-meta.xml
<CustomField>
    <fullName>bt_base__Schedule_Date_Time_Field__c</fullName>
    <label>Schedule Date/Time Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>