unpackaged/main/default/objects/bt_base__SCH_Schedule__c/fields/bt_base__SObject_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>bt_base__SObject_Record_Id__c</fullName>
    <label>SObject Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>