unpackaged/main/default/objects/bt_base__SCH_Schedule__c/fields/bt_base__Type__c.field-meta.xml
<CustomField>
    <fullName>bt_base__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>record</fullName>
                <label>Record</label>
            </value>
            <value>
                <fullName>object</fullName>
                <label>Object</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>