unpackaged/main/default/objects/bt_base__SCH_Schedule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>bt_base__Status__c</field>
        <operation>equals</operation>
        <value>scheduled</value>
    </filters>
    <label>All</label>
</ListView>