unpackaged/main/default/objects/bt_base__SCH_Schedule__c/listViews/OPH_BT_Global_Message_Scheduler.listView-meta.xml
<ListView>
    <fullName>OPH_BT_Global_Message_Scheduler</fullName>
    <columns>NAME</columns>
    <columns>bt_base__Base_Object_Evaluate_Criteria__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>bt_base__Status__c</field>
        <operation>equals</operation>
        <value>scheduled</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>OPH</value>
    </filters>
    <label>OPH - BT Global Message Scheduler</label>
    <sharedTo>
        <group>CRM_Core_Team</group>
    </sharedTo>
</ListView>